--- a/fillPaintMaster/ShopView1Controller.xib
+++ b/fillPaintMaster/ShopView1Controller.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ShopView1Controller">
@@ -32,28 +32,24 @@
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W7Q-My-DJb">
                             <rect key="frame" x="1" y="161" width="159" height="120"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="120" id="dUg-oy-Jwe"/>
                             </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dVZ-o8-ojX">
                             <rect key="frame" x="160" y="161" width="158" height="120"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="120" id="JMo-Ca-7fd"/>
                             </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o3I-s3-avM">
                             <rect key="frame" x="160" y="41" width="158" height="120"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="120" id="i6a-RL-E4K"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="实时预览" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EyI-lG-SCS">
                             <rect key="frame" x="58" y="0.0" width="202" height="21"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="202" id="9ZM-VM-EAU"/>
                                 <constraint firstAttribute="height" constant="21" id="IWh-HX-thv"/>
@@ -64,42 +60,36 @@
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tla-7U-Zqv">
                             <rect key="frame" x="1" y="41" width="159" height="120"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="120" id="QgN-hK-dzE"/>
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j9a-wk-dbO">
                             <rect key="frame" x="1" y="41" width="159" height="120"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="120" id="VmR-Kv-npX"/>
                             </constraints>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8OO-l7-oZ5">
                             <rect key="frame" x="160" y="41" width="159" height="120"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="120" id="fyA-U5-FpE"/>
                             </constraints>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="blS-e7-fsx">
                             <rect key="frame" x="1" y="161" width="159" height="120"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="120" id="Q1w-ZJ-OqY"/>
                             </constraints>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="20Z-uS-jFH">
                             <rect key="frame" x="159" y="161" width="159" height="120"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="120" id="cxz-Uc-PUL"/>
                             </constraints>
                         </button>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zhv-cb-Dm7">
                             <rect key="frame" x="1" y="41" width="317" height="240"/>
-                            <animations/>
                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="240" id="QgU-1R-kbd"/>
@@ -107,7 +97,6 @@
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UgM-7R-dhB">
                             <rect key="frame" x="128" y="289" width="63" height="47"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="63" id="Bw1-WS-YpL"/>
                                 <constraint firstAttribute="height" constant="47" id="fxG-GR-y9r"/>
@@ -119,7 +108,6 @@
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LD1-Wz-z70">
                             <rect key="frame" x="159" y="260" width="158" height="21"/>
-                            <animations/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="khY-IS-zrh"/>
                                 <constraint firstAttribute="width" constant="158" id="tGW-2l-cSo"/>
@@ -129,7 +117,6 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <animations/>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="20Z-uS-jFH" secondAttribute="trailing" constant="1" id="15G-Tf-Lq1"/>
@@ -168,7 +155,6 @@
                     </constraints>
                 </view>
             </subviews>
-            <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="UZ3-Bi-q4p" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="KrQ-Ts-9tT"/>
