--- a/fillPaintMaster/ShopLocationsTableViewCell.xib
+++ b/fillPaintMaster/ShopLocationsTableViewCell.xib
@@ -3,38 +3,72 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="113" id="KGk-i7-Jjw" customClass="ShopLocationsTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ShopLocationsTableViewCell" rowHeight="113" id="KGk-i7-Jjw" customClass="ShopLocationsTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="331" height="113"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="331" height="112"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zg3-so-huY">
-                        <rect key="frame" x="21" y="8" width="244" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zg3-so-huY">
+                        <rect key="frame" x="8" y="8" width="244" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="244" id="8q4-h9-Cae"/>
+                            <constraint firstAttribute="height" constant="21" id="m1i-OY-YNA"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="desc" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kIj-ji-2ST">
-                        <rect key="frame" x="21" y="83" width="152" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="100km" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wx6-Jr-3eD">
-                        <rect key="frame" x="242" y="83" width="72" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100km" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wx6-Jr-3eD">
+                        <rect key="frame" x="251" y="83" width="72" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="C5z-cW-Mmh"/>
+                            <constraint firstAttribute="width" constant="72" id="hX0-Pu-6fi"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="check0" highlightedImage="check1" translatesAutoresizingMaskIntoConstraints="NO" id="lmO-XE-fU6">
+                        <rect key="frame" x="293" y="43" width="30" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="MzI-7M-H7A"/>
+                            <constraint firstAttribute="width" constant="30" id="qFV-O3-Dez"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="desc" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kIj-ji-2ST">
+                        <rect key="frame" x="8" y="83" width="152" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="CNu-lc-vef"/>
+                            <constraint firstAttribute="width" constant="152" id="xH7-GP-xaU"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="lmO-XE-fU6" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="3LO-Jb-6kO"/>
+                    <constraint firstItem="lmO-XE-fU6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="5iT-VW-Wnn"/>
+                    <constraint firstItem="zg3-so-huY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="6d3-rK-PWt"/>
+                    <constraint firstItem="kIj-ji-2ST" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Dsm-TR-5FF"/>
+                    <constraint firstItem="wx6-Jr-3eD" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="M9O-Dn-lrh"/>
+                    <constraint firstItem="wx6-Jr-3eD" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Ui1-us-reL"/>
+                    <constraint firstItem="kIj-ji-2ST" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="ie4-7l-6di"/>
+                    <constraint firstItem="zg3-so-huY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="jTK-UM-3j7"/>
+                </constraints>
             </tableViewCellContentView>
             <point key="canvasLocation" x="211.5" y="161.5"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="check0" width="62" height="55"/>
+        <image name="check1" width="62" height="55"/>
+    </resources>
 </document>
