--- a/fillPaintMaster/ShopLocationsTableViewCell.xib
+++ b/fillPaintMaster/ShopLocationsTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
@@ -17,6 +17,7 @@
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zg3-so-huY">
                         <rect key="frame" x="8" y="8" width="244" height="21"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="244" id="8q4-h9-Cae"/>
                             <constraint firstAttribute="height" constant="21" id="m1i-OY-YNA"/>
@@ -27,6 +28,7 @@
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100km" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wx6-Jr-3eD">
                         <rect key="frame" x="251" y="83" width="72" height="21"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="C5z-cW-Mmh"/>
                             <constraint firstAttribute="width" constant="72" id="hX0-Pu-6fi"/>
@@ -36,23 +38,26 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="check0" highlightedImage="check1" translatesAutoresizingMaskIntoConstraints="NO" id="lmO-XE-fU6">
-                        <rect key="frame" x="293" y="43" width="30" height="25"/>
+                        <rect key="frame" x="305" y="48" width="18" height="16"/>
+                        <animations/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="25" id="MzI-7M-H7A"/>
-                            <constraint firstAttribute="width" constant="30" id="qFV-O3-Dez"/>
+                            <constraint firstAttribute="height" constant="16" id="MzI-7M-H7A"/>
+                            <constraint firstAttribute="width" constant="18" id="qFV-O3-Dez"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="desc" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kIj-ji-2ST">
-                        <rect key="frame" x="8" y="83" width="152" height="21"/>
+                        <rect key="frame" x="8" y="83" width="225" height="21"/>
+                        <animations/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="CNu-lc-vef"/>
-                            <constraint firstAttribute="width" constant="152" id="xH7-GP-xaU"/>
+                            <constraint firstAttribute="width" constant="225" id="xH7-GP-xaU"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <animations/>
                 <constraints>
                     <constraint firstItem="lmO-XE-fU6" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="3LO-Jb-6kO"/>
                     <constraint firstItem="lmO-XE-fU6" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="5iT-VW-Wnn"/>
@@ -64,6 +69,13 @@
                     <constraint firstItem="zg3-so-huY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="jTK-UM-3j7"/>
                 </constraints>
             </tableViewCellContentView>
+            <animations/>
+            <connections>
+                <outlet property="descLabel" destination="kIj-ji-2ST" id="IAP-cb-dTX"/>
+                <outlet property="distanceLabel" destination="wx6-Jr-3eD" id="5t3-uM-Hhj"/>
+                <outlet property="nameLabel" destination="zg3-so-huY" id="nQX-27-KuV"/>
+                <outlet property="selectedStatusImageView" destination="lmO-XE-fU6" id="dqS-wB-QKB"/>
+            </connections>
             <point key="canvasLocation" x="211.5" y="161.5"/>
         </tableViewCell>
     </objects>
