--- a/fillPaintMaster/TDBeautyTableViewCell.xib
+++ b/fillPaintMaster/TDBeautyTableViewCell.xib
@@ -8,45 +8,62 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="beautyCell" rowHeight="50" id="KGk-i7-Jjw" customClass="TDBeautyTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="beautyCell" rowHeight="110" id="KGk-i7-Jjw" customClass="TDBeautyTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="315" height="124"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
+                <rect key="frame" x="0.0" y="0.0" width="315" height="123"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJf-Nu-ea9">
-                        <rect key="frame" x="30" y="21" width="227" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rJf-Nu-ea9">
+                        <rect key="frame" x="8" y="13" width="227" height="21"/>
                         <animations/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="21" id="d45-5H-5uo"/>
-                            <constraint firstAttribute="width" constant="227" id="jlP-2n-wwF"/>
+                            <constraint firstAttribute="width" constant="227" id="adl-XX-4r1"/>
+                            <constraint firstAttribute="height" constant="21" id="d0B-b2-9Wr"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F3k-Uk-AhM">
-                        <rect key="frame" x="259" y="12" width="44" height="40"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="desc" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PSX-Cu-Vg7">
+                        <rect key="frame" x="8" y="75" width="247" height="40"/>
                         <animations/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="247" id="ZpK-FK-MLL"/>
+                            <constraint firstAttribute="height" constant="40" id="cwh-dZ-Rj9"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F3k-Uk-AhM">
+                        <rect key="frame" x="263" y="42" width="44" height="40"/>
+                        <animations/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="44" id="2q6-X6-tHQ"/>
+                            <constraint firstAttribute="height" constant="40" id="MDL-nJ-4ga"/>
+                        </constraints>
                         <state key="normal" image="addcart"/>
                         <state key="selected" image="removecart"/>
                     </button>
                 </subviews>
                 <animations/>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="F3k-Uk-AhM" secondAttribute="trailing" constant="9" id="Ei9-se-UnG"/>
-                    <constraint firstItem="F3k-Uk-AhM" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Fkz-7k-Y9q"/>
-                    <constraint firstItem="rJf-Nu-ea9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="22" id="bs5-52-pDL"/>
-                    <constraint firstItem="rJf-Nu-ea9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="jIc-XC-riK"/>
+                    <constraint firstItem="rJf-Nu-ea9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="3qE-KV-tda"/>
+                    <constraint firstItem="PSX-Cu-Vg7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="9ej-pf-P94"/>
+                    <constraint firstItem="F3k-Uk-AhM" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="FCj-La-qMw"/>
+                    <constraint firstItem="F3k-Uk-AhM" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="TSn-iM-HkX"/>
+                    <constraint firstItem="rJf-Nu-ea9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="oeo-uJ-Qvm"/>
+                    <constraint firstItem="PSX-Cu-Vg7" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="opa-AO-WCA"/>
                 </constraints>
             </tableViewCellContentView>
             <animations/>
             <connections>
                 <outlet property="addOrRemoveBtn" destination="F3k-Uk-AhM" id="AZK-x1-I46"/>
                 <outlet property="contentLabel" destination="rJf-Nu-ea9" id="Kpk-ul-yRS"/>
+                <outlet property="descLabel" destination="PSX-Cu-Vg7" id="Fj8-bF-D2L"/>
             </connections>
-            <point key="canvasLocation" x="358" y="161"/>
+            <point key="canvasLocation" x="218.5" y="112"/>
         </tableViewCell>
     </objects>
     <resources>
