--- a/fillPaintMaster/Base.lproj/Main.storyboard
+++ b/fillPaintMaster/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="284" y="-8"/>
+            <point key="canvasLocation" x="141" y="25"/>
         </scene>
         <!--Car Beauty View Controller-->
         <scene sceneID="BQ8-T8-hqD">
@@ -692,17 +692,11 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Noq-Q4-kVE">
                                 <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Po5-r6-LCX">
-                                        <rect key="frame" x="0.0" y="31" width="320" height="517"/>
-                                        <animations/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <color key="tintColor" red="0.3782378106" green="0.36877617880000002" blue="0.40420484290000003" alpha="1" colorSpace="calibratedRGB"/>
-                                    </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wcB-II-AZo">
-                                        <rect key="frame" x="158" y="0.0" width="162" height="31"/>
+                                        <rect key="frame" x="158" y="0.0" width="162" height="45"/>
                                         <animations/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="31" id="zB6-68-f3A"/>
+                                            <constraint firstAttribute="height" constant="45" id="zB6-68-f3A"/>
                                         </constraints>
                                         <state key="normal" title="施工直播">
                                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -715,10 +709,10 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RoF-vH-dzb">
-                                        <rect key="frame" x="0.0" y="0.0" width="163" height="31"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="163" height="45"/>
                                         <animations/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="31" id="zDU-ai-o6O"/>
+                                            <constraint firstAttribute="height" constant="45" id="zDU-ai-o6O"/>
                                         </constraints>
                                         <state key="normal" title="门店全景">
                                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -730,6 +724,12 @@
                                             <color key="titleColor" red="0.20567231850000001" green="0.7498171683" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                     </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Po5-r6-LCX">
+                                        <rect key="frame" x="0.0" y="45" width="320" height="503"/>
+                                        <animations/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
                                 </subviews>
                                 <animations/>
                                 <constraints>
@@ -898,42 +898,6 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tTR-Zx-gSx" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="1wU-Fd-Qa3">
-            <objects>
-                <viewController id="eu1-hq-N2H" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Ukz-VT-107"/>
-                        <viewControllerLayoutGuide type="bottom" id="Ip7-Qn-A0D"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="F4V-BT-k0L">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="89o-Ms-Rth" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="ePT-nV-Odv">
-            <objects>
-                <viewController id="eAp-bl-Bs2" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="baQ-e2-8Nw"/>
-                        <viewControllerLayoutGuide type="bottom" id="G5Q-sL-cpB"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="i3z-uP-9bk">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fP9-SQ-DCD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
     </scenes>
